Fix text size issues on iphone 5

--- a/client/src/components/Intro/Intro.css
+++ b/client/src/components/Intro/Intro.css
@@ -19,6 +19,22 @@
     font-family: 'Lato', sans-serif;
     color: #424242;
     padding: 30px;
+    animation: fadein 1.5s;
+    animation-name: fadein;
+    animation-duration: 2s;
+}
+
+@media (max-height: 600px) {
+    .Intro--explanation {
+        padding: 10px;
+        font-size: 0.8em;
+    }
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    50%  { opacity: 0; }
+    to   { opacity: 1; }
 }
 
 .Intro--button  {
